[gd_scene load_steps=6 format=3 uid="uid://c2ofakdfkwnaa"]

[ext_resource type="Script" path="res://scripts/emote.gd" id="1_g74nn"]
[ext_resource type="AudioStream" uid="uid://qhulx83cifbc" path="res://audio/touch4.wav" id="3_07kvb"]
[ext_resource type="PackedScene" uid="uid://cieuq0jympjo3" path="res://scenes/emote_sprite.tscn" id="3_tvdw5"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0pyyh"]
bounce = 0.42

[sub_resource type="CircleShape2D" id="CircleShape2D_xluvp"]
radius = 48.0416

[node name="Emote" type="Node2D"]
script = ExtResource("1_g74nn")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_0pyyh")
max_contacts_reported = 200

[node name="EmoteSprite" parent="RigidBody2D" instance=ExtResource("3_tvdw5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource("CircleShape2D_xluvp")

[node name="ContactTimer" type="Timer" parent="."]
wait_time = 0.42
one_shot = true

[node name="TouchAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_07kvb")
volume_db = -80.0

[connection signal="body_entered" from="RigidBody2D" to="." method="_on_any_body_entered"]
[connection signal="body_entered" from="RigidBody2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="ContactTimer" to="." method="_on_contact_timer_timeout"]
